# assembly_force_plate

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  Recording_1.csv  call_reset.py  dataprocessing_test.ipynb  frames.yaml  package.xml  pyproject.toml  test.py  test_threading.py
launch/: bringup_robot.launch  bringup_sensors.launch  force_sensor_01.param.yaml  force_sensor_03.param.yaml  sensor_1.launch  teach_tool.rviz  test.launch  test_2.launch  test_3.launch  test_4.launch
recordings/23_07_23_clip/: Recording_0.csv  Recording_1.csv  Recording_2.csv  Recording_3.csv
recordings/23_07_23_straight_line/: Recording_0.csv  Recording_2.csv
recordings/lshape/: Recording_0.csv  Recording_1.csv  Recording_2.csv  Recording_3.csv
recordings/other/: Recording_2.csv
recordings/press/: Recording_1.csv
recordings/snap/: Recording_1.csv  Recording_3.csv
src/: flet_test.py  gui_test.py  holoviz_app.py  lib.rs  test.py  test_v2.py  test_v3.py  webgui.py
src/lshape/: Recording_4.csv
src/other/: Recording_0.csv
src/press/: Recording_0.csv  Recording_2.csv  Recording_3.csv
src/snap/: Recording_0.csv  Recording_2.csv
standalone/: Cargo.toml
standalone/src/: main.rs
step_files/: foot.STEP  plate.STEP
test_scripts/: ft_sensor_mock.py  simulation_ui.py
urdf/: robot_cell.urdf.xacro  robot_cell_ur5.urdf.xacro
