
[project]
name = "rust_subscriber"
version = "0.0.1"
description = "abc"
authors = [
    {name = "Daniel Bargmann", email = "daniel.bargmann@ipa.fraunhofer.de"},
]
dependencies = [
    "hvplot>=0.8.4",
    "streamz>=0.6.4",
    "rospkg>=1.5.0",
    "pip>=23.1.2",
    "rich>=13.4.2",
]

requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

